# Eclipse

./: .gitignore  AGENTS.md  Eclipse.spec  README.md  fix_catalog.py  fix_colors.py  fix_yellow.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.understand-anything/: fingerprints.json  knowledge-graph.json  meta.json
assets/: Eclipse.icns
src/agentbox/: converter.py  importer.py  main.py  models.py  storage.py
src/agentbox/exporters/: base.py  claude_code.py
src/agentbox/importers/: github_url.py
src/agentbox/templates/: CLAUDE.md.j2  README.md.j2  claude_agent.md.j2  codex_agent.md.j2
src/agentbox/ui/: category_panel.py  converter_panel.py  styles.py
src/eclipse/: __main__.py  app.py  catalog.py  converter.py  export_formats.py  importer.py  main.py  models.py  paths.py  render.py  safe_export.py  skill_preview.py  storage.py  validators.py
src/eclipse/exporters/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  opencode.py  windsurf.py
src/eclipse/importers/: __init__.py  base.py  github_url.py  local_drop.py  save_to_library.py  scanner.py
src/eclipse/templates/: AGENTS.md.j2  cursor_rule.mdc.j2  mcp_server.json.j2  windsurf_workflow.md.j2
src/eclipse/ui/: category_panel.py  converter_panel.py  export_panel.py  import_panel.py  main_window.py  sidebar.py  styles.py
tests/: test_catalog.py  test_converter.py  test_models.py  test_paths.py  test_safe_export.py  test_scanner.py  test_storage_extended.py  test_storage_render.py  test_validators.py
